[package]
name = "socks"
version = "0.3.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SOCKS proxy clients"
repository = "https://github.com/sfackler/rust-socks"
documentation = "https://docs.rs/socks/0.3.0/socks"
readme = "README.md"

[dependencies]
byteorder = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
ws2_32-sys = "0.1"
